objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>AMP_Total__c</fullName>
        <description>Grand Total (Retail + Builder + Multi Family)</description>
        <label>Actual Mohawk Purchases Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Profile_Status__c</fullName>
        <formula>IF(!ISBLANK(Primary_Business__c) &amp;&amp; Annual_Retail_Sales__c &gt; 0, &apos;Complete&apos;,&apos;Incomplete&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Profile Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Aladdin_Comm__c</fullName>
        <label>Actual Mohawk Purchases - Aladdin Comm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Aladdin__c</fullName>
        <label>Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ca_Other__c</fullName>
        <label>Actual Mohawk Purchases - Carpet Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ca_Portico__c</fullName>
        <label>Actual Mohawk Purchases - Carpet Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ca_Prop__c</fullName>
        <label>Actual Mohawk Purchases - Carpet Propert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Carpet__c</fullName>
        <label>Actual Mohawk Purchases - Carpet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Cu_Po__c</fullName>
        <label>Actual Mohawk Purchases - Cushion Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Cu_Prop__c</fullName>
        <label>Actual Mohawk Purchases - Cushion Proper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Cushion__c</fullName>
        <label>Actual Mohawk Purchases - Cushion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ha_Po__c</fullName>
        <label>Actual Mohawk Purchases - Hardwood Potic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ha_Prop__c</fullName>
        <label>Actual Mohawk Purchases - Hardwood Prope</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Hardwood__c</fullName>
        <label>Actual Mohawk Purchases - Hardwood</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Horizon__c</fullName>
        <label>Actual Mohawk Purchases - Aladdin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Karastan__c</fullName>
        <label>Actual Mohawk Purchases - Karastan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_La_Po__c</fullName>
        <label>Actual Mohawk Purchases - Laminate Potic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_La_Prop__c</fullName>
        <label>Actual Mohawk Purchases - Laminate Prope</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Laminate__c</fullName>
        <label>Actual Mohawk Purchases - Laminate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Mainstreet_Com__c</fullName>
        <label>Actual Mohawk Purchases - Mainstreet_Com</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Prod_Cat_Other__c</fullName>
        <label>Actual Mohawk Purchases - Other Prodcuct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Re_Comm__c</fullName>
        <label>Actual Mohawk Purchases - Resilient Comm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Re_Portico__c</fullName>
        <label>Actual Mohawk Purchases - Resilient Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Re_Prop__c</fullName>
        <label>Actual Mohawk Purchases - Resilient Prop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Re_Retail__c</fullName>
        <label>Actual Mohawk Purchases - Resilient Reta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Resilient__c</fullName>
        <label>Actual Mohawk Purchases - Resilient</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ti_Po__c</fullName>
        <label>Actual Mohawk Purchases - Tile Potico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Ti_Prop__c</fullName>
        <label>Actual Mohawk Purchases - Tile Propertie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Tile__c</fullName>
        <label>Actual Mohawk Purchases - Tile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Mohawk_Purchases_Total__c</fullName>
        <label>Roling 12M Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aladdin_Commercial__c</fullName>
        <label>Aladdin Commercial</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aladdin_Distribution__c</fullName>
        <formula>If( No_Karastan__c = TRUE,  Primary_Business__r.No_Karastan_Aladdin_Carpet__c,  Distribution_Aladdin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aladdin Product Category Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_GOpp_Total__c</fullName>
        <formula>R_GOpp_Total__c + B_GOpp_Total__c + M_GOpp_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Opportunity Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Red_Opportunity_Total__c</fullName>
        <formula>R_Red_Opportunity_Total__c + B_Red_Opportunity_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Yellow_Opportunity_Total__c</fullName>
        <formula>R_Yellow_Opportunity_Total__c +  B_Yellow_Opportunity_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yellow Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Retail_Sales_Non_Flooring__c</fullName>
        <label>Annual Retail Sales Non-Flooring(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Retail_Sales__c</fullName>
        <label>Annual Retail Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_ACT__c</fullName>
        <description>Builder Actual Mohawk Purchases Aladdin Commercial Total</description>
        <label>Act Mohawk Purch-Aladdin Comm Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_AC__c</fullName>
        <description>Builder Actual Mohawk Purchases Aladdin Comm</description>
        <label>Actual Mohawk Purchases - Aladdin Comm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_A__c</fullName>
        <description>Builder Actual Mohawk Purchases Aladdin</description>
        <label>Actual Mohawk Aladdin Purchases(R12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Car_Non_Por__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c&gt;0, B_AMP_Car__c -B_AMP_Car_Por__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK Carpet Purchases (Non Portic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Car_Non_Prop__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c&gt;0, B_AMP_Car__c -B_AMP_Car_Prop__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Carpet Purchases (Non Properti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Car__c</fullName>
        <description>Builder Actual Mohawk Purchases - Carpet</description>
        <label>Actual Mohawk Carpet Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Cus_Non_Por__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_Cus__c -B_AMP_Cus_Por__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Cushion Purchases (Non Portico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Cus_Non_Prop__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_Cus__c -B_AMP_Cus_Prop__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Cushion Purchases (Non Propert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Cus__c</fullName>
        <description>Builder Actual Mohawk Purchases - Cushion</description>
        <label>Actual Mohawk Cushion Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Har__c</fullName>
        <description>Builder Actual Mohawk Purchases Hardwood</description>
        <label>Actual Mohawk Wood Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Hor__c</fullName>
        <description>Builder Actual Mohawk Purchases Horizon</description>
        <label>Actual Mohawk Horizon Purchases(R12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Kar__c</fullName>
        <description>Builder Actual Mohawk Purchases Karastan</description>
        <label>Actual Mohawk Karastan Purchases(R12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Lam_Non_Por__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_Lam__c -B_AMP_Lam_Por__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Laminate Purchases (Non Portic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Lam_Non_Prop__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_Lam__c -B_AMP_Lam_Prop__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Laminate Purchases (Non Proper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Lam__c</fullName>
        <description>Builder Actual Mohawk Purchases Laminate</description>
        <label>Actual Mohawk Laminate Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_RC__c</fullName>
        <description>Builder Actual Mohawk Purchases Resilient Commercial</description>
        <label>Actual Mohawk Resilient Com Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_RR__c</fullName>
        <description>Builder Actual Mohawk Purchases Resilient Retail</description>
        <label>Actual Mohawk Purch. - Resilient Retail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_R__c</fullName>
        <description>Builder Actual Mohawk Purchases Resilient</description>
        <label>Actual Mohawk Resilient Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Resil_Non_Por__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_RR__c -B_AMP_Resil_Por__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Resilient Purchase(Non Portico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Resil_Non_Prop__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_RR__c -B_AMP_Resil_Prop__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Resilient Purchases (Non Prope</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_T__c</fullName>
        <description>Builder Actual Mohawk Purchases Tile</description>
        <label>Actual Mohawk Tile Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_AMP_Tile_Non_Por__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 ,B_AMP_T__c -B_AMP_Tile_Por__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Tile Purchases (Non Portico)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Tile_Non_Prop__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0, B_AMP_T__c -B_AMP_Tile_Prop__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Tile Purchases (Non Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Wood_Non_Por__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 ,B_AMP_Har__c -B_AMP_Wood_Por__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Wood Purchases (Non Portico)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_AMP_Wood_Non_Prop__c</fullName>
        <formula>IF(Builder_Multi_Channel_split__c &gt;0 , B_AMP_Har__c -B_AMP_Wood_Prop__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. MHK  Wood Purchases (Non Properties</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Actual_Mohawk_Purchases_total__c</fullName>
        <description>Builder</description>
        <formula>B_AMP_Car__c + 
B_AMP_Cus__c + 
B_AMP_Har__c +
B_AMP_Lam__c + 
B_AMP_R__c + 
B_AMP_T__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Mohawk Purchases total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Business_Split__c</fullName>
        <description>Builder</description>
        <formula>IF( Two_Sales_Teams__c = true, Primary_Business__r.Builder_Business_Split_2_Team__c, Primary_Business__r.Builder_Business_Split_1Team__c )</formula>
        <label>Business Split Builder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Aladdin_Comm__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_AC__c &gt; 0, 
B_AMP_AC__c  /  B_EWP_AC__c
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Aladdin Commercial Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Aladdin__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_A__c &gt; 0, 
B_AMP_A__c  /  B_EWP_A__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Aladdin Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Carpet__c</fullName>
        <formula>If(B_EWP_Car__c &gt; 0,
B_AMP_Car__c/  B_EWP_Car__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Carpet Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Cushion__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_Cus__c &gt; 0, 
B_AMP_Cus__c  /  B_EWP_Cus__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Cushion Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Hardwood__c</fullName>
        <formula>If(B_EWP_Har__c &gt; 0, 
B_AMP_Har__c  /  B_EWP_Har__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Wood Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Horizon__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_Hor__c &gt; 0, 
B_AMP_Hor__c  /  B_EWP_Hor__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Horizon Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Karastan__c</fullName>
        <formula>If(B_EWP_K__c&gt; 0, 
B_AMP_Kar__c  /  B_EWP_K__c
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Karastan Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Laminate__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_Lam__c &gt; 0, 
B_AMP_Lam__c  /  B_EWP_Lam__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Laminate Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Resilient_Comm__c</fullName>
        <formula>If(B_EWP_RC__c &gt; 0, 
B_AMP_RC__c/  B_EWP_RC__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk  Resilient Comm Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Resilient_Retail__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_RR__c&gt; 0, 
B_AMP_RR__c/  B_EWP_RR__c
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Resilient Retail Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Resilient__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_R__c &gt; 0, 
B_AMP_R__c  /  B_EWP_R__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Resilient Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Tile__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_T__c &gt; 0, 
B_AMP_T__c  /  B_EWP_T__c 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Tile Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Share_Total__c</fullName>
        <formula>IF(B_EWP_Total__c &gt; 0 , B_Actual_Mohawk_Purchases_total__c /  B_EWP_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Builder Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Current_Mohawk_Shr_Aladdin_Comm_Total__c</fullName>
        <description>Builder</description>
        <formula>If(B_EWP_ACT__c &gt; 0 ,B_AMP_ACT__c /B_EWP_ACT__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mohawk Aladdin Comm Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Aladdin_Comm_Total__c</fullName>
        <label>Aladdin Comm Product Category Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Aladdin_Comm__c</fullName>
        <label>Aladdin Comm Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Aladdin__c</fullName>
        <label>Aladdin Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Carpet__c</fullName>
        <label>Carpet Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Cushion__c</fullName>
        <label>Cushion Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Hardwood__c</fullName>
        <label>Hardwood Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Horizon__c</fullName>
        <label>Horizon Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Karastan__c</fullName>
        <label>Karastan Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Laminate__c</fullName>
        <description>Builder</description>
        <label>Laminate Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Resilient_Comm__c</fullName>
        <label>Resilient Comm Product Category Allocati</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Resilient_Retail__c</fullName>
        <formula>If(B_Distribution_Resilient_Comm__c &gt; 0 , 1 - B_Distribution_Resilient_Comm__c,0)</formula>
        <label>Resilient Retail Product Category Alloca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Resilient__c</fullName>
        <label>Resilient Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Distribution_Tile__c</fullName>
        <label>Tile Product Category Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_ERS_AC__c</fullName>
        <description>Builder/Multi-Family</description>
        <label>Estimated Aladdin Comm Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_A__c</fullName>
        <description>Builder/Multi-Family</description>
        <label>Estimated Aladdin Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Car__c</fullName>
        <description>Builder</description>
        <label>Estimated Carpet Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Cus__c</fullName>
        <description>Builder</description>
        <label>Estimated Cushion Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Har__c</fullName>
        <description>Builder</description>
        <label>Estimated Wood Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Hor__c</fullName>
        <description>Builder/Multi-Family</description>
        <label>Estimated Horizon Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Kar__c</fullName>
        <description>Builder/Multi-Family</description>
        <label>Estimated Karastan Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Lam__c</fullName>
        <description>Builder</description>
        <label>Estimated Laminate Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_RC__c</fullName>
        <description>Builder/Multi Family Resilient Comm</description>
        <label>Estimated Resilient Comm Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_RR__c</fullName>
        <description>Builder/Multi-Family Resilient Retail</description>
        <label>Estimated Resilient Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_R__c</fullName>
        <description>Builder</description>
        <label>Estimated Resilient Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_T__c</fullName>
        <description>Builder</description>
        <label>Estimated Tile Retail Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_ERS_Total__c</fullName>
        <description>Builder</description>
        <label>Estimated Retail Sales Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_ACT__c</fullName>
        <description>Builder</description>
        <formula>B_EWP_AC__c + B_EWP_RC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Aladdin Comm Wholesale Purch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_AC__c</fullName>
        <formula>B_EWP_Car__c * B_Distribution_Aladdin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Aladdin Comm Wholesale Purchas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_A__c</fullName>
        <formula>B_EWP_Car__c * B_Distribution_Aladdin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Aladdin Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Car__c</fullName>
        <description>Builder</description>
        <label>Estimated Carpet Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Cus__c</fullName>
        <description>Builder</description>
        <label>Estimated Cushion Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Har__c</fullName>
        <description>Builder</description>
        <label>Estimated Wood Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Hor__c</fullName>
        <formula>B_EWP_Car__c * B_Distribution_Horizon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Horizon Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_K__c</fullName>
        <formula>B_EWP_Car__c * B_Distribution_Karastan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Karastan Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Kar__c</fullName>
        <formula>B_EWP_Car__c * B_Distribution_Karastan__c</formula>
        <label>Estimated Karastan Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_Lam__c</fullName>
        <description>Builder</description>
        <label>Estimated Laminate Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_RC__c</fullName>
        <description>Builder</description>
        <formula>B_EWP_R__c * B_Distribution_Resilient_Comm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Resilient Comm Wholesale Purch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_RR__c</fullName>
        <description>Builder</description>
        <formula>B_EWP_R__c *  B_Distribution_Resilient_Retail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Resilient Reta Wholesale Purch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_EWP_R__c</fullName>
        <description>Builder</description>
        <label>Estimated Resilient Wholesale Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>